--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /WebApplication3/WebApplication3/bin
+/WebApplication3/.vs
+/WebApplication3/WebApplication3/obj/Debug
